test_programs/compile_failure/noirc_frontend_tests_cast_signed_i32_to_field_must_error_1/src/main.nr

        fn main(x: i32) {
            assert(x as Field != 0);
        }
    